--- a/css/styles.css
+++ b/css/styles.css
@@ -101,15 +101,15 @@ header {
     display: inline-block; }
   header a {
     display: block;
-    color: #0a9628;
+    color: #41531c;
     padding: 10px; }
     header a:hover {
-      color: #07661b;
+      color: #232d0f;
       text-decoration: none;
       background: #eee;
       border-radius: 4px; }
     header a:focus {
-      color: #0a9628;
+      color: #41531c;
       text-decoration: none; }
   header.active {
     display: block; }
@@ -126,7 +126,7 @@ header {
   position: fixed;
   right: 15px;
   top: 10px;
-  color: #0a9628;
+  color: #41531c;
   font-size: 1.5em;
   z-index: 20;
   padding: 0 7px;
@@ -142,7 +142,7 @@ header {
   padding-right: 15px;
   padding-top: 10px;
   cursor: pointer;
-  color: #0a9628; }
+  color: #41531c; }
   #mobile-menu-close span {
     font-size: 0.5em;
     text-transform: uppercase; }
@@ -186,7 +186,7 @@ footer {
     color: #74808a;
     padding: 10px; }
     .social a:hover {
-      color: #0a9628; }
+      color: #41531c; }
 
 .btn-rounded-white {
   display: inline-block;
@@ -196,7 +196,7 @@ footer {
   border-radius: 30px;
   transition: 0.5s ease all; }
   .btn-rounded-white:hover {
-    color: #0a9628;
+    color: #41531c;
     background: #fff;
     text-decoration: none; }
 
@@ -221,7 +221,7 @@ footer {
     left: 0;
     right: 0;
     margin: 0 auto;
-    background: #0a9628; }
+    background: #41531c; }
 
 .background-alt {
   background: #f2f2f5; }
@@ -258,7 +258,7 @@ footer {
     letter-spacing: 0.05em;
     line-height: 0.9em; }
   #lead-content h2 {
-    color: #2ef158;
+    color: #8cb23c;
     font-weight: 500;
     font-size: 2.25em;
     margin-bottom: 15px; }
@@ -271,7 +271,7 @@ footer {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(7, 102, 27, 0.8);
+  background: rgba(35, 45, 15, 0.8);
   z-index: 1; }
 
 #lead-down {
@@ -290,7 +290,7 @@ footer {
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    border: 3px solid #2ef158;
+    border: 3px solid #8cb23c;
     text-align: center; }
   #lead-down i {
     animation: pulsate 1.5s ease;
@@ -344,15 +344,15 @@ footer {
     right: auto;
     height: 100%;
     width: 3px;
-    background: #0a9628;
+    background: #41531c;
     z-index: 0; }
   #experience-timeline:after {
     position: absolute;
     content: '';
     width: 3px;
     height: 40px;
-    background: #0a9628;
-    background: linear-gradient(to bottom, #0a9628, rgba(10, 150, 40, 0));
+    background: #41531c;
+    background: linear-gradient(to bottom, #41531c, rgba(65, 83, 28, 0));
     top: 100%;
     left: 303px; }
 
@@ -390,7 +390,7 @@ footer {
   color: #fff;
   width: 50px;
   height: 50px;
-  background: #0a9628;
+  background: #41531c;
   border-radius: 50%;
   float: left;
   z-index: 99;
@@ -530,7 +530,7 @@ footer {
 */
 #contact {
   padding: 50px 15px;
-  background: #0a9628;
+  background: #41531c;
   text-align: center; }
   #contact h2 {
     margin: 0 0 15px 0;
@@ -547,7 +547,7 @@ footer {
     border-radius: 4px;
     border: none;
     margin-bottom: 10px;
-    background: #054e15;
+    background: #141a09;
     color: #fff;
     transition: 0.5s ease all; }
     #contact-form input::-webkit-input-placeholder, #contact-form textarea::-webkit-input-placeholder {
@@ -562,7 +562,7 @@ footer {
       color: #fff; }
     #contact-form input:focus, #contact-form textarea:focus {
       outline: none;
-      background: #021e08; }
+      background: black; }
   #contact-form textarea {
     height: 150px;
     resize: none; }
@@ -573,7 +573,7 @@ footer {
     border-radius: 4px;
     padding: 5px 10px;
     border: none;
-    color: #0a9628;
+    color: #41531c;
     font-weight: 700;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: 0.5s ease all; }
