--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@
 */
 
 // Define base and accent colors
-$base-color: #0a9628;
+$base-color: #41531c;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
